Attendance Register Module - What's New

# Bugfix 2013.07.06.01
(I've abandoned the previous version numbering, often confused with supported Moodle version number)
Fixes
* [#56] Rewritten query that determines which users must be checked for creating 
        new online sessions (used on each cron run; determines the delay on session 
        creation)
* [#57] Minor warning (in DEBUG only) when personal Register page was shown

## BUGFIX 2.4.3+ (2013050901)
Fixes
* [#54] Missing completionlib.php reference causes error during cron execution

## RELEASE 2.4.3 (2013040607)
New Features
* [#7]  Added Activity Completion support, based on total tracked time
Fixes
* [#52] Fixed on-view-completion implementation (it never actually worked)
Improvements
* [#28] When a tracked user may also view other users' sessions, in user lists
        has a shortcut button to see his/her own sessions page.
* [#43] After a new instance has been created, a message is shown to explain that
        old Sessions will show on next cron run.
* [#51] Removed update-sessions-on-user-view feature, that have been hidden and 
        disabled since a long time ago

## BUGFIX 2.4.2+ (2013032201)
Fixes
* [#47] Fixed a regression bug in the improvement fix #37
* [#46] Fixed Cron not correctly recording last execution time. 
        It was executing at every cron, regardless of last execution.
        Now Moodle does not execute module cron if last execution is less than 
        5 minutes ago.

### RELEASE 2.4.2 (2013020604)
Fixes
* [#42] DDL bug in fix for #36 that causes error during upgrade on PostgreSQL

### RELEASE 2.4.1 (2013012906)
Fixes
* [#39] Fixed offline session overlapping detection errors 
* [#36] Fixed compatibility issue with Oracle ('online' columns renamed to 'onlinesess')
* Fixed minor typos in Italian translation
* Checked compatibility with Moodle 2.4.1
Improvements
* [#37] Improved performance of cron processing in crowded courses (thanks to MorrisR2)

